# Cpp

./: README.md
1hSeira/: CMakeLists.txt
1hSeira/Ex1/: A1.cpp  CMakeLists.txt
1hSeira/Exercise1/: CMakeLists.txt  Ex1  Ex1.cpp
1hSeira/Exercise2/: CMakeLists.txt  Ex2  Ex2.cpp
1hSeira/Exercise3/: CMakeLists.txt  Ex3  Ex3.cpp
1hSeira/Exercise4/: CMakeLists.txt  Ex4  Ex4.cpp
Assignment_2/: CMakeLists.txt
Assignment_2/Exercise1/: CMakeLists.txt  Ex1  Ex1.cpp
Assignment_2/Exercise2/: CMakeLists.txt  Ex2.cpp
Assignment_2/Exercise3/: CMakeLists.txt  Ex3.cpp
Assignment_2/Exercise4/: CMakeLists.txt  Ex4.cpp  std_lib_facilities.h
Assignment_2/Exercise4/str_opera/: CMakeLists.txt  str_opera.cpp  str_opera.h
Assignment_3/_helloWorld_fltk_gui_chapter12-2/: CMakeLists.txt
Assignment_3/_helloWorld_fltk_gui_chapter12-2/Ex1/: CMakeLists.txt  ex1.cpp
Assignment_3/_helloWorld_fltk_gui_chapter12-2/Ex2/: CMakeLists.txt  ex2.cpp
Assignment_4/A4/tem_2405/: CMakeLists.txt  Exx.cpp
Assignment_4_previous_year/A4/: CMakeLists.txt
Assignment_4_previous_year/A4/Ex/: CMakeLists.txt  Covid.h  Exx.cpp
First PRogram/: CMakeLists.txt  firstProgram.cpp
Second/: CMakeLists.txt  HelloWorld  HelloWorld.cpp
